# PySetWacom

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  PySetWacom.desktop  README.rst  __pkginfo__.py  build_docs.sh  create_dotdesktop.py  formate.toml  git_helper.yml  lint_roller.sh  pyproject.toml  pysetwacom.py  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.ci/: copy_pypi_2_github.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs_test_action.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
PySetWacom/: AppIndicator.py  __init__.py  __main__.py  button.py  device.py  gui.py  profile.py  tray_icon.py  wxglade.wxg  xmodmap.py
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  requirements.txt
doc-source/_templates/sidebar/: navigation.html
src/: pysetwacom.py
src/PySetWacom/: AppIndicator.py  __init__.py  button.py  device.py  gui.py  main.py  profile.py  tray_icon.py  wxglade.wxg  xmodmap.py
