# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = PySetWacom
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = GNU Lesser General Public License v3 or later (LGPLv3+)
keywords = wxpython, gui, wacom, tablet, linux, utility
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Linux
url = https://github.com/domdfcoding/PySetWacom
project_urls =
    Documentation = https://PySetWacom.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/PySetWacom/issues
    Source_Code = https://github.com/domdfcoding/PySetWacom
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Artistic Software
    Topic :: Multimedia :: Graphics
    Topic :: Utilities

[options]
python_requires = >=3.6.1
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*
    doc-source

[mypy]
python_version = 3.6
namespace_packages = True
check_untyped_defs = True
warn_unused_ignores = True

[options.entry_points]
console_scripts =
    PySetWacom = PySetWacom.__main__:main
    pysetwacom = PySetWacom.__main__:main
